objects/redwing__Prerequisite__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Conditions__c</fullName>
        <label>Conditions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Instructor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prerequisite</label>
    <nameField>
        <label>Prerequisite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prerequisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>